--- a/xapi.html
+++ b/xapi.html
@@ -8,7 +8,7 @@
   <meta content="yes" name="apple-touch-fullscreen">
   <meta content="black" name="apple-mobile-web-app-status-bar-style">
   <meta content="320" name="MobileOptimized">
-  <title>官方客服</title>
+  <title>官方</title>
 <style>
 .container {
         width: 100px;
